[tool.poetry]
name = "data-viz-final-project"
version = "0.1.0"
description = "Data Visualization Final Project UCU DS MS Programme"
authors = ["Roman Kovalchuk <ro.kovalch@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
poetry = "^1.8.3"
numpy = "^2.0.1"
dash = "^2.17.1"
plotly = "^5.23.0"
jupyter = "^1.0.0"
dash-bootstrap-components = "^1.6.0"
pydeck = "0.5.0"
geopy = "^2.4.1"
googlemaps = "^4.10.0"
python-dotenv = "^1.0.1"
dash-deck = "^0.0.1"
dash-core-components = "^2.0.0"
dash-html-components = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
